--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "plugin",
     "document creation"
   ],
-  "author": "Jason Cust <jason.cust@gmail.com>",
+  "author": "Jason Cust <jason@centralping.com>",
   "license": "Apache 2.0",
   "bugs": {
     "url": "https://github.com/CentralPing/mongoose-plugin-created/issues"
