--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mongoose-plugin-created",
-  "version": "1.2.2",
+  "version": "1.3.0",
   "description": "Mongoose.js plugin to capture document creation timestamp with optional user identifier",
   "main": "created.js",
   "dependencies": {
@@ -26,7 +26,8 @@
   "keywords": [
     "mongoose",
     "plugin",
-    "document creation"
+    "timestamp",
+    "creation"
   ],
   "author": "Jason Cust <jason@centralping.com>",
   "license": "Apache 2.0",
