--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mongoose-plugin-created",
-  "version": "1.3.2",
+  "version": "1.4.0-rc1",
   "description": "Mongoose.js plugin to capture document creation timestamp with optional user identifier",
   "main": "created.js",
   "dependencies": {
@@ -15,6 +15,7 @@
     "gulp-jasmine": "^2.0.0",
     "gulp-jshint": "^1.9.2",
     "gulp-todo": "^2.5.0",
+    "mongoose": "^4.0.0-rc4",
     "yargs": "^3.5.3"
   },
   "scripts": {
