--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
   "name": "mongoose-plugin-created",
-  "version": "1.4.0-rc1",
+  "version": "1.4.0-rc2",
   "description": "Mongoose.js plugin to capture document creation timestamp with optional user identifier",
   "main": "created.js",
   "dependencies": {
-    "lodash-node": "^3.5.0",
-    "mongoose": "^3.8.24"
+    "lodash-node": "^3.5.0"
   },
   "devDependencies": {
     "faker": "^2.1.2",
@@ -17,6 +16,9 @@
     "gulp-todo": "^2.5.0",
     "mongoose": "^4.0.0-rc4",
     "yargs": "^3.5.3"
+  },
+  "peerDependencies": {
+    "mongoose": ">=4.0.0-rc4"
   },
   "scripts": {
     "test": "gulp test"
