chore: update to mongoose 4.0.0 release

--- a/package.json
+++ b/package.json
@@ -14,11 +14,11 @@
     "gulp-jasmine": "^2.0.0",
     "gulp-jshint": "^1.9.2",
     "gulp-todo": "^2.5.0",
-    "mongoose": "^4.0.0-rc4",
+    "mongoose": "^4.0.0",
     "yargs": "^3.5.3"
   },
   "peerDependencies": {
-    "mongoose": ">=4.0.0-rc4"
+    "mongoose": ">=4"
   },
   "scripts": {
     "test": "gulp test"
